--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <div id="codeDisplay" class="text-center mb-4 font-mono text-lg text-gray-800"></div>
     <div id="chatContainer" class="hidden">
       <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded bg-white"></div>
-      <input id="messageInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Type a message...">
+      <input id="textInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Type a message...">
       <button id="sendButton" class="bg-blue-500 text-white px-4 py-2 rounded w-full hover:bg-blue-600">Send</button>
     </div>
     <div id="connectContainer">
       <input id="codeInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter code to connect">
       <button id="connectButton" class="bg-green-500 text-white px-4 py-2 rounded w-full hover:bg-green-600">Connect</button>
     </div>
-    <button id="newSessionButton" class="bg-red-500 text-white px-4 py-2 rounded w-full mt-4 hidden hover:bg-red-600">New Session</button>
+    <button id="newSessionButton" class="bg-red-500 text-white px-4 py-2 rounded w-full mt-4 hidden hover:bg-blue-600">New Session</button>
   </div>
   <script>
     function generateCode() {
@@ -37,6 +37,7 @@
     let code = generateCode();
     let isInitiator = false;
     let isConnected = false;
+    let hasProcessedAnswer = false; // Flag to prevent duplicate answers
     let peerConnection;
     let dataChannel;
     let connectionTimeout;
@@ -96,6 +97,7 @@
 
     function startPeerConnection() {
       console.log('Starting peer connection for code:', code);
+      hasProcessedAnswer = false; // Reset flag for new connection
       peerConnection = new RTCPeerConnection({
         iceServers: [
           { urls: 'stun:stun.l.google.com:19302' },
@@ -111,7 +113,7 @@
             credential: 'muazkh'
           }
         ],
-        iceTransportPolicy: 'all' // Allow all candidate types
+        iceTransportPolicy: 'all'
       });
 
       if (isInitiator) {
@@ -150,7 +152,7 @@
               console.log('ICE gathering timeout, sending offer for code:', code);
               socket.send(JSON.stringify({ type: 'offer', offer: peerConnection.localDescription, code }));
             }
-          }, 10000); // 10-second ICE timeout
+          }, 5000); // 5-second ICE timeout
         } else if (peerConnection.iceGatheringState === 'complete' && isInitiator) {
           clearTimeout(iceTimeout);
           console.log('ICE gathering complete, sending offer for code:', code);
@@ -217,7 +219,7 @@
             credential: 'muazkh'
           }
         ],
-        iceTransportPolicy: 'all' // Allow all candidate types
+        iceTransportPolicy: 'all'
       });
 
       peerConnection.ondatachannel = (event) => {
@@ -256,7 +258,7 @@
               console.log('ICE gathering timeout, sending answer for code:', code);
               socket.send(JSON.stringify({ type: 'answer', answer: peerConnection.localDescription, code }));
             }
-          }, 10000); // 10-second ICE timeout
+          }, 5000); // 5-second ICE timeout
         } else if (peerConnection.iceGatheringState === 'complete') {
           clearTimeout(iceTimeout);
           console.log('ICE gathering complete, sending answer for code:', code);
@@ -314,6 +316,15 @@
 
     function handleAnswer(answer) {
       console.log('Handling answer for code:', code);
+      if (hasProcessedAnswer) {
+        console.log('Skipping duplicate answer for code:', code);
+        return;
+      }
+      if (peerConnection.signalingState !== 'have-local-offer') {
+        console.log('Skipping answer due to invalid signaling state:', peerConnection.signalingState);
+        return;
+      }
+      hasProcessedAnswer = true;
       peerConnection.setRemoteDescription(new RTCSessionDescription(answer)).then(() => {
         console.log('Successfully set remote description for answer');
         candidatesQueue.forEach(candidate => {
@@ -376,6 +387,7 @@
       clearTimeout(connectionTimeout);
       isConnected = false;
       isInitiator = false;
+      hasProcessedAnswer = false;
       retryCount = 0;
       code = generateCode();
       candidatesQueue = [];
