--- a/index.html
+++ b/index.html
@@ -106,11 +106,6 @@
             urls: ['turn:openrelay.metered.ca:80', 'turn:openrelay.metered.ca:443'], 
             username: 'openrelayproject', 
             credential: 'openrelayproject'
-          },
-          {
-            urls: 'turn:numb.viagenie.ca',
-            username: 'webrtc@live.com',
-            credential: 'muazkh'
           }
         ],
         iceTransportPolicy: 'all'
@@ -138,7 +133,7 @@
 
       peerConnection.onicecandidate = (event) => {
         if (event.candidate) {
-          console.log('Sending ICE candidate for code:', code, event.candidate);
+          console.log('Sending ICE candidate for code:', code, 'Type:', event.candidate.type, event.candidate);
           socket.send(JSON.stringify({ type: 'candidate', candidate: event.candidate, code }));
         }
       };
@@ -152,7 +147,7 @@
               console.log('ICE gathering timeout, sending offer for code:', code);
               socket.send(JSON.stringify({ type: 'offer', offer: peerConnection.localDescription, code }));
             }
-          }, 5000);
+          }, 3000);
         } else if (peerConnection.iceGatheringState === 'complete' && isInitiator) {
           clearTimeout(iceTimeout);
           console.log('ICE gathering complete, sending offer for code:', code);
@@ -212,11 +207,6 @@
             urls: ['turn:openrelay.metered.ca:80', 'turn:openrelay.metered.ca:443'], 
             username: 'openrelayproject', 
             credential: 'openrelayproject'
-          },
-          {
-            urls: 'turn:numb.viagenie.ca',
-            username: 'webrtc@live.com',
-            credential: 'muazkh'
           }
         ],
         iceTransportPolicy: 'all'
@@ -244,7 +234,7 @@
 
       peerConnection.onicecandidate = (event) => {
         if (event.candidate) {
-          console.log('Sending ICE candidate for code:', code, event.candidate);
+          console.log('Sending ICE candidate for code:', code, 'Type:', event.candidate.type, event.candidate);
           socket.send(JSON.stringify({ type: 'candidate', candidate: event.candidate, code }));
         }
       };
@@ -258,7 +248,7 @@
               console.log('ICE gathering timeout, sending answer for code:', code);
               socket.send(JSON.stringify({ type: 'answer', answer: peerConnection.localDescription, code }));
             }
-          }, 5000);
+          }, 3000);
         } else if (peerConnection.iceGatheringState === 'complete') {
           clearTimeout(iceTimeout);
           console.log('ICE gathering complete, sending answer for code:', code);
